examples/compiler_errors/exposing/exposing_private_member.flx
import ExposingTarget exposing (secret)

fn main() with IO {
    print(secret())
}
